infra/k8s/v1/app.yml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: modulario
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: modulario
    spec:
      containers:
        - name: app
          image: us.gcr.io/modulario-177306/app:latest
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
          ports:
          - containerPort: 5000:80
---
apiVersion: v1
kind: Service
metadata:
  name: modulario
  labels:
    app: modulario
spec:
  type: LoadBalancer
  ports:
  - port: 80
  selector:
    app: modulario
