infra/k8s/v1/frontend.yml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: modulario-frontend
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: modulario-frontend
    spec:
      containers:
        - name: app
          image: us.gcr.io/modulario-177306/frontend:#MODULARIO_VERSION#
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
          ports:
          - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: modulario-frontend
  labels:
    app: modulario-frontend
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: modulario-frontend
