infra/k8s/v1/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test
spec:
  rules:
  - host: api.miris.io
    http:
      paths:
      - backend:
          serviceName: modulario-backend
          servicePort: 8000
  - host: miris.io
    http:
      paths:
      - backend:
          serviceName: modulario-frontend
          servicePort: 80
